test/jsbt/vectors/errors/default-import/src/index.ts
/**
 * Checks a value.
 * @param value - value to check.
 * @returns checked value.
 * @example
 * ```js
 * import verify from '@jsbt-test/errors-default-import';
 * verify('ok');
 * ```
 */
export function verify(value: string): string {
  return value;
}
